# implfuture.dev

./: .bazelrc  .gitignore  BUILD  Cargo.toml  LICENSE  README.md  WORKSPACE  cargo-bazel.lock.json  deploy.sh  next.config.js  package.json  run.sh  tailwind.config.js  vercel-install.sh
.github/workflows/: build.yaml
bundle/: BUILD  app.ts  esbuild.config.mjs  package.json
components/: bevy.tsx  bevy_dynamic.tsx  bloglayout.tsx  header.tsx  rust.tsx
crates/bevy-example/: Cargo.toml
crates/bevy-example/src/: lib.rs
emsdk/: BUILD  emsdk.bzl
pages/: _app.tsx  _document.tsx  blog.tsx  index.tsx  projects.tsx
pages/blog/: [draft] dont read me.mdx  benefits-of-bevy.mdx  building-a-blog-like-its-2022.mdx  draft.mdx  hello-world.mdx
rust/: Cargo.toml
rust/src/: lib.rs
server/: BUILD  Cargo.toml
server/src/: main.rs
src/: lib.rs  projects.rs
src/blog/: mod.rs  p04_pytorch.mdx  p04_pytorch.rs  p05_pytorch_p2.mdx  p05_pytorch_p2.rs  post1.rs  post2.mdx  post2.rs  post2_0.mdx  post2_1.mdx  post3.mdx  post3.rs  syntaxhighlight.rs
static/: index.bzl.html
static/styles/: main.css  prism-vs-dark-plus.css  prism-vs.css
styles/: Home.module.css  globals.css  prism-vs.css  prism-vsc-dark-plus.css
zig/: BUILD  zig.bzl
