[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
gaia = { path = ".." }

axum = "0.5"
clap = { version = "3.1.7", features = ["derive"] }
env_logger = "0.9"
num_cpus = "1.13"
once_cell = "1.5"
tokio = { version = "1.15.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.3", features = ["fs"] }
anyhow = "1.0.58"
axum-extra = { version = "0.3.5", features = ["spa"] }
yew = { version = "0.19", features = ["ssr"] }
yew-router = { version = "0.16.0" }
futures = "0.3.21"
lazy_static = "1.4.0"

[patch.'crates-io']
# yew = { path = "../yew/packages/yew" }
# yew-router = { path = "../yew/packages/yew-router" }
yew = { git = "https://github.com/kcking/yew", branch = "mdx" }
yew-router = { git = "https://github.com/kcking/yew", branch = "mdx" }
